--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,13 @@
     {
       "src": "/.*",
       "dest": "/index.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/assets/$1",
+      "headers": {
+        "x-nginx-cache": "immutable"
+      }
     }
   ]
 }
